<resources>
    <string name="app_name">Dice Roller</string>
    <string name="action_roll">Roll</string>
    <string name="action_one">One</string>
    <string name="action_two">Two</string>
    <string name="action_three">Three</string>
    <string name="action_stop">Stop</string>
    <string name="dice_one">1</string>

    <!-- Dialog title -->
    <string name="pick_roll_length">Roll length?</string>

    <!-- Dialog list options -->
    <string-array name="length_array">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>

    <string name="add_one">Add one</string>
    <string name="subtract_one">Subtract one</string>
    <string name="roll">Roll</string>

</resources>